# alpaca-paper-trading

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  RUN.md  docker-compose.yml  improved_plan.md  main.py  plan.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: routes.py
app/broker/: __init__.py  alpaca_client.py  market_data_adapter.py  stream_adapter.py  trading_adapter.py
app/calculator/: __init__.py  calculator_engine.py  indicator_calculator.py  liquidity_calculator.py  pnl_risk_calculator.py  position_sizer.py  risk_calculator.py
app/core/: clock.py  config.py  database.py  dynamic_risk.py  enums.py  events.py  exceptions.py  idempotency.py  logging.py  models.py  redis.py  state.py  thread_manager.py  trading.py
app/dashboard/: index.html  server.py
app/datasource/: __init__.py  account_service.py  alpaca_gateway.py  asset_selector.py  market_data_service.py  service_container.py
app/execution/: engine.py  order_factory.py  reconciliation.py  router.py
app/executor/: __init__.py  (+2 more)
config/: llm_config.py  prompts.py  risk_limits.py  settings.py  strategy_params.py
requirements/: base.txt  dev.txt
tests/: conftest.py  test_calculators.py  test_config.py  test_csv_store.py  test_dashboard.py  test_datasource.py  test_env_config.py  test_health.py  test_integration.py  test_llm.py  test_llm_latency.py  test_operability.py  test_order_submitter.py  test_phase3_risk_portfolio.py  test_phase4_phase5.py  test_reconciliation.py  test_state_phase2.py  test_thread_safety.py  test_trade_executor.py  test_validators.py
(+48 files in other folders)
