[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpaca-paper-agent"
version = "0.1.0"
description = "Paper-only Alpaca trading agent MVP built with FastAPI, PostgreSQL, Redis, and APScheduler."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alpaca-py>=0.42.0,<0.43.0",
  "apscheduler>=3.10.4,<4.0.0",
  "asyncpg>=0.30.0,<0.31.0",
  "fastapi>=0.115.0,<0.116.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "redis>=5.2.0,<6.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "structlog>=24.4.0,<25.0.0",
  "uvicorn[standard]>=0.32.0,<0.33.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0,<0.21.0",
  "black>=24.10.0,<25.0.0",
  "httpx>=0.28.0,<0.29.0",
  "mypy>=1.13.0,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<0.25.0",
  "ruff>=0.7.0,<0.8.0",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
asyncio_mode = "auto"
testpaths = ["tests"]
